--- a/src/components/ItineraryHeader.css
+++ b/src/components/ItineraryHeader.css
@@ -48,6 +48,8 @@
 
 .ItineraryHeader_alertIcon {
   margin-right: 4px;
+  position: relative;
+  top: 4px;
 }
 
 .ItineraryHeader_alertHeader {
