--- a/src/components/RouteLeg.css
+++ b/src/components/RouteLeg.css
@@ -26,3 +26,8 @@
 .RouteLeg_duration {
   font-size: 12px;
 }
+
+.RouteLeg_bikeIcon {
+  position: relative;
+  top: 4px;
+}
